# MetagameTrackerBot

./: .gitignore  .replit  EventLink.py  attendance_report.py  bad_words.py  checks.py  claim_result.py  constants.py  custom_errors.py  data.py  data_manipulation.py  data_translation.py  database_connection.py  database_structure.sql  date_functions.py  date_menu.py  datefuncs.py  demo_functions.py  discord_messages.py  dropdown_test.py  flag_bad_word.py  format_mapper.py  game_mapper.py  hi.py  interaction_data.py  interaction_objects.py  main.py  metagame_report.py  myCommands.py  newDatabase.py  new_question.py  new_text_input.py  newerDatabase.sql  next_text_modal.py  outputBuilder.py  output_builder.py  paid_stores.py  paid_users.py  pdf_helper.py  player_win_record.py  (+18 more)
_nonfunctioning/: ai_new_data_input_view_modal_command.py  clean_up_command.py  embed.py  example_response.json  experiment_dataplot.py  format_heat_map.sql  get_all_hubs.sql  get_prices_from_scryfall.py  graph_services.py  limited_heat.sql  meta_analysis.py  my_opponents.sql  personal_rounds.sql  post_views_metagame_table.sql  register_store_command.py  roundsWinsLosses.sql  roundwinpercent.sql  spicerack.py  spicerack_requests.py  submit_file_modal.py  trying_to_convert_rounds_to_meta.sql
api_calls/: archidekt_decklist.py  melee_tournaments.py  moxfield_call.py  moxfield_decklist.py  mtg_parser.py
commands/: archetype_submitted_command.py  assign_mtsubmitter.py  assign_mtsubmitter_command.py  atest.py  attendance_command.py  ban_words_command.py  ban_words_commands.py  bot_leaves_command.py  (+49 more)
(+210 files in other folders)
