[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.4",
    "matplotlib==3.9.3",
    "numpy==2.1.3",
    "pandas>=2.3.3",
    "psycopg2-binary==2.9.10",
    "pytesseract==0.3.13",
    "python-dotenv>=1.1.0",
    "pytz==2024.2",
]
