[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.12"
dependencies = [
    "discord-py",
    "matplotlib",
    "numpy",
    "pandas",
    "psycopg",
    "python-dotenv",
    "pytz",
    "replit",
    "replit-object-storage",
    "requests",
    "urllib3",
]
