[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.12"
dependencies = [
    "bar-chart-race>=0.1.0",
    "discord-py",
    "httpx>=0.28.1",
    "matplotlib",
    "mtg-parser>=0.0.1a54",
    "numpy",
    "pandas",
    "psycopg",
    "python-dotenv",
    "pytz",
    "replit",
    "replit-object-storage",
    "requests",
    "stripe>=15.1.0",
    "urllib3",
]
